Autoplay: Clear flags on top frame navigation

Some subframe navigations were temporarily clearing
the AutoplayFlags at the same time the top frame
was checking them.

This changes it so we only clear AutoplayFlags
on a top frame navigation.

BUG=836369

Change-Id: Iffe51b8267009aaf0e53d56d18ce505a74cb761f
Reviewed-on: https://chromium-review.googlesource.com/1026798
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: Becca Hughes <beccahughes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554058}
Former-commit-id: db5279797b05deffef36dc9796df5305e1894d86